# spatialized

./: .gitignore  LICENSE  README.md  paper_overview.md  pyproject.toml
.feautres/: PLAN.md
.github/workflows/: test.yml
examples/: ferricrete_transfer_workflow.py  paper_like_experiment.py  synthetic_workflow.py
skills/setup/: SKILL.md
skills/spatialized-workflow/: SKILL.md
src/spatialized/: __init__.py  cli.py  deep_features.py  encoding.py  models.py  patterns.py  raster.py  unsupervised.py  workflows.py
tests/: test_cli.py  test_deep_features.py  test_encoding.py  test_examples.py  test_models.py  test_patterns.py  test_raster.py  test_unsupervised.py  test_workflows.py
