[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spatialized"
version = "0.1.0"
description = "Vectorised spatial pattern preparation for spatial random forests."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "darkmine-oss" },
]
dependencies = [
  "numpy>=1.23",
]

[project.optional-dependencies]
model = [
  "scikit-learn>=1.4",
]
test = [
  "pytest>=7",
  "scikit-learn>=1.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/spatialized"]
