[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spatialized"
version = "0.1.0"
description = "Spatial random forest workflows for gridded geoscience data."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "darkmine-oss" },
]
keywords = ["spatial", "random-forest", "geoscience", "geotiff", "raster"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.23",
]

[project.urls]
Repository = "https://github.com/darkmine-oss/spatialized"
Issues = "https://github.com/darkmine-oss/spatialized/issues"

[project.scripts]
spatialized = "spatialized.cli:main"

[project.optional-dependencies]
model = [
  "scikit-learn>=1.4",
]
raster = [
  "rasterio>=1.3",
]
full = [
  "scikit-learn>=1.4",
  "rasterio>=1.3",
]
deep = [
  "umap-learn>=0.5",
]
test = [
  "pytest>=7",
  "scikit-learn>=1.4",
  "rasterio>=1.3",
]
dev = [
  "build>=1.2",
  "twine>=5",
  "pytest>=7",
  "scikit-learn>=1.4",
  "rasterio>=1.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/spatialized"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:Could not find the number of physical cores:UserWarning:joblib\\.externals\\.loky\\.backend\\.context",
]
